# openFactory

./: .gitignore  .gitmodules
docs/: conf.py
src/: meson.build
src/game/mods/base/: mod_info.toml
src/game/mods/base/scripts/: Main.hx  open_factory.hxml  vs-code.code-workspace
src/game/mods/base/scripts/ui/: Window.hx
src/game/src/: game.cpp  game.hpp  main.cpp  mod.cpp  mod.hpp  ressources.hpp
src/game/src/scripting/: context.cpp  context.hpp
src/game/tests/: scripting.cpp
src/spide2d/: meson.build
src/spide2d/include/spide2d/: camera.hpp  geometry.hpp  hotkey.hpp  hotkey_registry.hpp  key.hpp  signals.hpp  window.hpp
src/spide2d/include/spide2d/components/: sprite.hpp
src/spide2d/include/spide2d/systems/: ui_renderer.hpp
src/spide2d/src/: hotkey.cpp  window.cpp
src/spide2d/src/backend_sdl/: hotkey_registry.cpp  hotkey_registry.hpp  sdlwindow.cpp  sdlwindow.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/spide2d/src/backend_sdl/systems/: ui_renderer.cpp
src/spide2d/tests/: geometry.cpp
src/subprojects/: eigen.wrap  entt.wrap  json.wrap  lua.wrap  nuklear.wrap  spdlog.wrap  toml.wrap
